[tool.poetry]
name = "orderin"
version = "0.1.0"
description = ""
authors = ["hyo00000 <gywkdk80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "0.115.12"
uvicorn = "0.34.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.16.0"

[tool.black]
line-length = 150

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
